syntax = "proto3";

package com.vasiliytemniy.grpc.ordertracking.service;


service OrderTrackingService {
  rpc createOrderTracking (CreateOrderTrackingRequest) returns (OrderTrackingResponse);
  rpc getOrderTrackingsByOrderId (GetOrderTrackingsByOrderIdRequest) returns (stream ManyOrderTrackingsWithPaginationResponse);
  rpc getLastOrderTrackingByOrderId (GetLastOrderTrackingByOrderIdRequest) returns (OrderTrackingResponse);
  rpc getOrderTrackingsByCarrierId (GetOrderTrackingsByCarrierIdRequest) returns (stream ManyOrderTrackingsWithPaginationResponse);
  rpc updateOrderTracking (UpdateOrderTrackingRequest) returns (OrderTrackingResponse);
  rpc setOrderTrackingStatuses (SetOrderTrackingStatusesRequest) returns (ManyOrderTrackingsResponse);
  rpc reorderOrderTrackings (ReorderOrderTrackingsRequest) returns (ManyOrderTrackingsResponse);
  rpc deleteOrderTrackingsByOrderId (DeleteOrderTrackingsByOrderIdRequest) returns (ManyOrderTrackingsResponse);
  rpc deleteByOrderTrackingIdentifier (DeleteByOrderTrackingIdentifierRequest) returns (OrderTrackingResponse);
}

message OrderTrackingData {
  string id = 1;
  int64 orderId = 2;
  int32 pointNumber = 3;
  int64 fromFacilityId = 4;
  int64 destinationId = 5;
  string destinationType = 6;
  int64 carrierId = 7;
  string status = 8;
  int32 deliveryCost = 9;
  string currency = 10;
  int32 currencyDecimalMultiplier = 11;
  int32 massControlValue = 12;
  string massMeasure = 13;
  string estimatedDeliveryAt = 14;
  string deliveredAt = 15;
  string createdAt = 16;
  string updatedAt = 17;
}

// External identifier
message OrderTrackingIdentifier {
  int64 orderId = 1;
  int32 pointNumber = 2;
}

// Requests

message CreateOrderTrackingRequest {
  int64 orderId = 1;
  int64 fromFacilityId = 2;
  int64 destinationId = 3;
  string destinationType = 4;
  int64 carrierId = 5;
  string status = 6;
  int32 deliveryCost = 7;
  string currency = 8;
  int32 currencyDecimalMultiplier = 9;
  int32 massControlValue = 10;
  string massMeasure = 11;
  string estimatedDeliveryAt = 12;
  string deliveredAt = 13;
}

message GetOrderTrackingsByOrderIdRequest {
  int64 orderId = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetOrderTrackingsByCarrierIdRequest {
  int64 carrierId = 1;
  int32 page = 2;
  int32 size = 3;
  bool filterActive = 4;
}

message GetLastOrderTrackingByOrderIdRequest {
  int64 orderId = 1;
}

message UpdateOrderTrackingRequest {
  int64 orderId = 1;
  int32 pointNumber = 2;
  int64 fromFacilityId = 3;
  int64 destinationId = 4;
  string destinationType = 5;
  int64 carrierId = 6;
  string status = 7;
  int32 deliveryCost = 8;
  string currency = 9;
  int32 currencyDecimalMultiplier = 10;
  int32 massControlValue = 11;
  string massMeasure = 12;
  string estimatedDeliveryAt = 13;
  string deliveredAt = 14;
}

message SetOrderTrackingStatusesRequest {
  string status = 1;
  string deliveredAt = 2;
  repeated OrderTrackingIdentifier orderTrackingIdentifiers = 3; // An array to be able to set multiple orders statuses if many orders are delivered at the same time
}

message ReorderOrderTrackingsRequest {
  message MapFieldEntry {
    int32 key = 1;
    int32 value = 2;
  }
  int64 orderId = 1;
  repeated MapFieldEntry fromPointNumberToPointNumber = 2;
}

message DeleteOrderTrackingsByOrderIdRequest {
  int64 orderId = 1;
}

message DeleteByOrderTrackingIdentifierRequest {
  int64 orderId = 1;
  int32 pointNumber = 2;
}


// Responses

message OrderTrackingResponse {
  OrderTrackingData orderTracking = 1;
}

message ManyOrderTrackingsResponse {
  repeated OrderTrackingData orderTracking = 1;
}

message ManyOrderTrackingsWithPaginationResponse {
  repeated OrderTrackingData orderTracking = 1;
  int32 page = 2;
  int32 size = 3;
  int32 totalElements = 4;
  int32 totalPages = 5;
  bool isFirst = 6;
  bool isLast = 7;
}